sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path_all__base_2_sample_1.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: all_possible_solve_steps
---
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 3
              setValue: 3
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 3
                column: 2
              setValue: 3
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 0
                column: 1
              setValue: 2
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 3
              setValue: 4
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 4
          actions:
            - position:
                row: 3
                column: 0
              setValue: 4
  - strategy: LockedSets
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 1
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 3
            - position:
                row: 1
                column: 3
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 3
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 3
              deleteCandidates:
                - 3
            - position:
                row: 2
                column: 3
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 3
            - position:
                row: 2
                column: 3
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 3
                column: 0
              deleteCandidates:
                - 3
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 0
                column: 1
              setValue: 2
        - reasons:
            - position:
                row: 1
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 3
              setValue: 1
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 1
          actions:
            - position:
                row: 2
                column: 2
              setValue: 1
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 4
          actions:
            - position:
                row: 3
                column: 0
              setValue: 4
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 0
                column: 1
              setValue: 2
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 3
              setValue: 4
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 4
          actions:
            - position:
                row: 3
                column: 0
              setValue: 4
  - strategy: LockedSets
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 0
              deleteCandidates:
                - 2
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 2
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 4
          actions:
            - position:
                row: 1
                column: 0
              deleteCandidates:
                - 4
            - position:
                row: 2
                column: 0
              deleteCandidates:
                - 4
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 2
            - position:
                row: 2
                column: 1
              deleteCandidates:
                - 2
        - reasons:
            - position:
                row: 1
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 1
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 1
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 0
              deleteCandidates:
                - 4
            - position:
                row: 2
                column: 1
              deleteCandidates:
                - 4
        - reasons:
            - position:
                row: 1
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 2
                column: 3
              deleteCandidates:
                - 1
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 1
          actions:
            - position:
                row: 2
                column: 3
              deleteCandidates:
                - 1
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 0
              setValue: 3
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 1
              setValue: 3
        - reasons:
            - position:
                row: 2
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 3
              setValue: 4
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 1
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 2
                column: 0
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 3
              setValue: 4
  - strategy: LockedSets
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 1
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 0
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 0
              deleteCandidates:
                - 3
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 1
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 2
                column: 0
              setValue: 2
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 1
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 2
                column: 0
              setValue: 2
