sudoku-rs/src/solver/strategic/snapshots/sudoku__solver__strategic__tests__snapshots__solve_path_all__base_2_sample_2.snap
---
source: sudoku-rs/src/solver/strategic/mod.rs
expression: all_possible_solve_steps
---
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 0
                column: 1
              setValue: 2
        - reasons:
            - position:
                row: 1
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 3
              setValue: 3
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 1
          actions:
            - position:
                row: 2
                column: 0
              setValue: 1
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 4
          actions:
            - position:
                row: 3
                column: 2
              setValue: 4
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 0
              setValue: 3
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 0
                column: 3
              setValue: 4
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 1
              setValue: 1
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 2
              setValue: 3
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 3
                column: 0
              setValue: 2
        - reasons:
            - position:
                row: 3
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 3
                column: 3
              setValue: 1
  - strategy: LockedSets
    deductions:
      deductions:
        - reasons: []
          actions:
            - position:
                row: 0
                column: 0
              deleteCandidates:
                - 2
        - reasons: []
          actions:
            - position:
                row: 0
                column: 0
              deleteCandidates:
                - 2
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 2
        - reasons: []
          actions:
            - position:
                row: 0
                column: 3
              deleteCandidates:
                - 3
        - reasons: []
          actions:
            - position:
                row: 0
                column: 3
              deleteCandidates:
                - 3
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 3
        - reasons: []
          actions:
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 2
        - reasons: []
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 3
        - reasons: []
          actions:
            - position:
                row: 2
                column: 1
              deleteCandidates:
                - 1
        - reasons: []
          actions:
            - position:
                row: 2
                column: 1
              deleteCandidates:
                - 1
            - position:
                row: 3
                column: 0
              deleteCandidates:
                - 1
        - reasons: []
          actions:
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 4
        - reasons: []
          actions:
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 4
            - position:
                row: 3
                column: 3
              deleteCandidates:
                - 4
        - reasons: []
          actions:
            - position:
                row: 3
                column: 0
              deleteCandidates:
                - 1
        - reasons: []
          actions:
            - position:
                row: 3
                column: 3
              deleteCandidates:
                - 4
  - strategy: GroupIntersectionBoth
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 1
              candidates:
                - 2
            - position:
                row: 1
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 0
                column: 0
              deleteCandidates:
                - 2
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 3
            - position:
                row: 1
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 3
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 0
                column: 0
              candidates:
                - 2
            - position:
                row: 0
                column: 1
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 1
              deleteCandidates:
                - 2
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
            - position:
                row: 1
                column: 3
              candidates:
                - 3
          actions:
            - position:
                row: 1
                column: 2
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 1
            - position:
                row: 3
                column: 0
              candidates:
                - 1
          actions:
            - position:
                row: 2
                column: 1
              deleteCandidates:
                - 1
        - reasons:
            - position:
                row: 3
                column: 2
              candidates:
                - 4
            - position:
                row: 3
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 4
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 1
            - position:
                row: 2
                column: 1
              candidates:
                - 1
          actions:
            - position:
                row: 3
                column: 0
              deleteCandidates:
                - 1
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 4
            - position:
                row: 3
                column: 2
              candidates:
                - 4
          actions:
            - position:
                row: 3
                column: 3
              deleteCandidates:
                - 4
  - strategy: WWing
    deductions:
      deductions:
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 1
                - 2
            - position:
                row: 2
                column: 0
              candidates:
                - 1
            - position:
                row: 2
                column: 1
              candidates:
                - 1
            - position:
                row: 3
                column: 0
              candidates:
                - 1
                - 2
          actions:
            - position:
                row: 0
                column: 0
              deleteCandidates:
                - 2
        - reasons:
            - position:
                row: 0
                column: 0
              candidates:
                - 2
                - 3
            - position:
                row: 0
                column: 1
              candidates:
                - 2
            - position:
                row: 1
                column: 1
              candidates:
                - 2
            - position:
                row: 1
                column: 2
              candidates:
                - 2
                - 3
          actions:
            - position:
                row: 0
                column: 3
              deleteCandidates:
                - 3
        - reasons:
            - position:
                row: 2
                column: 0
              candidates:
                - 1
            - position:
                row: 2
                column: 1
              candidates:
                - 1
                - 4
            - position:
                row: 3
                column: 0
              candidates:
                - 1
            - position:
                row: 3
                column: 3
              candidates:
                - 1
                - 4
          actions:
            - position:
                row: 2
                column: 2
              deleteCandidates:
                - 4
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 3
                - 4
            - position:
                row: 1
                column: 2
              candidates:
                - 3
            - position:
                row: 1
                column: 3
              candidates:
                - 3
            - position:
                row: 2
                column: 2
              candidates:
                - 3
                - 4
          actions:
            - position:
                row: 3
                column: 3
              deleteCandidates:
                - 4
- - strategy: NakedSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 0
              setValue: 3
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 0
                column: 3
              setValue: 4
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 1
              setValue: 1
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 2
              setValue: 3
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 3
                column: 0
              setValue: 2
        - reasons:
            - position:
                row: 3
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 3
                column: 3
              setValue: 1
  - strategy: HiddenSingles
    deductions:
      deductions:
        - reasons:
            - position:
                row: 0
                column: 0
              candidates:
                - 3
          actions:
            - position:
                row: 0
                column: 0
              setValue: 3
        - reasons:
            - position:
                row: 0
                column: 3
              candidates:
                - 4
          actions:
            - position:
                row: 0
                column: 3
              setValue: 4
        - reasons:
            - position:
                row: 1
                column: 1
              candidates:
                - 1
          actions:
            - position:
                row: 1
                column: 1
              setValue: 1
        - reasons:
            - position:
                row: 1
                column: 2
              candidates:
                - 2
          actions:
            - position:
                row: 1
                column: 2
              setValue: 2
        - reasons:
            - position:
                row: 2
                column: 1
              candidates:
                - 4
          actions:
            - position:
                row: 2
                column: 1
              setValue: 4
        - reasons:
            - position:
                row: 2
                column: 2
              candidates:
                - 3
          actions:
            - position:
                row: 2
                column: 2
              setValue: 3
        - reasons:
            - position:
                row: 3
                column: 0
              candidates:
                - 2
          actions:
            - position:
                row: 3
                column: 0
              setValue: 2
        - reasons:
            - position:
                row: 3
                column: 3
              candidates:
                - 1
          actions:
            - position:
                row: 3
                column: 3
              setValue: 1
